# devcontainer-qt6

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  buildcommand.sh  conanfile.py  copy.sh  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
DBContainers/: docker-compose.yml
include/: chart.hpp
linuxconfig/: .p10k.zsh  .zshrc  conan-debug-profile
qml/: main.qml
src/: chart.cpp  main-chart.cpp  main.cpp  main3.cpp
