[tool.poetry]
name = "qmldevcontainer"
version = "0.1.0"
description = ""
authors = ["Sukhdeep Singh <sukhdeep.singh@trr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyside6 = "6.7.1"
psycopg = "3.1.19" 
redis = "5.0.6"
cassandra-driver = "3.29.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
